--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,32 @@
 com.qwerty.title=spring-boot-study
 com.qwerty.name=\u5CB8\u4E45
-
+#\u914D\u7F6Etomcat\u7AEF\u53E3
+server.port=8888
+#\u65E5\u5FD7\u4F4D\u7F6E\uFF08\u5982\u679C\u4E0D\u52A0\u76D8\u7B26\uFF0C\u6D4B\u8BD5\u9ED8\u8BA4\u9879\u76EE\u6240\u5728\u7684\u76D8\u7B26\uFF09
+logging.path=/user/local/log
+#\u6839\u636Elogging.level\u540E\u9762\u7684\u5305\u540D\u6765\u7ED9\u4E0D\u540C\u7684\u5305\u540D\u8BBE\u7F6E\u4E0D\u540C\u7B49\u7EA7\u7684\u65E5\u5FD7\u8F93\u51FA
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=ERROR
+#\u6570\u636E\u5E93\u914D\u7F6E
+spring.datasource.url=jdbc\:oracle\:thin\:@localhost\:1521\:XE
+spring.datasource.username=springboot
+spring.datasource.password=123
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.show-sql= true
+# Redis\u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A0\uFF09
+spring.redis.database=0  
+# Redis\u670D\u52A1\u5668\u5730\u5740
+spring.redis.host=localhost
+# Redis\u670D\u52A1\u5668\u8FDE\u63A5\u7AEF\u53E3
+spring.redis.port=6379  
+# Redis\u670D\u52A1\u5668\u8FDE\u63A5\u5BC6\u7801\uFF08\u9ED8\u8BA4\u4E3A\u7A7A\uFF09
+spring.redis.password=
+# \u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09 \u9ED8\u8BA4 8
+spring.redis.lettuce.pool.max-active=8
+# \u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09 \u9ED8\u8BA4 -1
+spring.redis.lettuce.pool.max-wait=-1
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5 \u9ED8\u8BA4 8
+spring.redis.lettuce.pool.max-idle=8
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5 \u9ED8\u8BA4 0
+spring.redis.lettuce.pool.min-idle=0
