--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ com.qwerty.name=\u5CB8\u4E45
 #\u914D\u7F6Etomcat\u7AEF\u53E3
 server.port=8888
 #\u65E5\u5FD7\u4F4D\u7F6E\uFF08\u5982\u679C\u4E0D\u52A0\u76D8\u7B26\uFF0C\u6D4B\u8BD5\u9ED8\u8BA4\u9879\u76EE\u6240\u5728\u7684\u76D8\u7B26\uFF09
-logging.path=/user/local/log
+logging.path=F:/temp/user/local/log
 #\u6839\u636Elogging.level\u540E\u9762\u7684\u5305\u540D\u6765\u7ED9\u4E0D\u540C\u7684\u5305\u540D\u8BBE\u7F6E\u4E0D\u540C\u7B49\u7EA7\u7684\u65E5\u5FD7\u8F93\u51FA
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
@@ -61,3 +61,32 @@ mongodb.primary.uri=mongodb://localhost:27017
 mongodb.primary.database=primary
 mongodb.secondary.uri=mongodb://localhost:27017
 mongodb.secondary.database=secondary
+
+#\u9ED8\u8BA4\u652F\u6301\u6587\u4EF6\u4E0A\u4F20.
+#spring.servlet.multipart.enabled=true
+#\u652F\u6301\u6587\u4EF6\u5199\u5165\u78C1\u76D8.
+#spring.servlet.multipart.file-size-threshold=0
+# \u4E0A\u4F20\u6587\u4EF6\u7684\u4E34\u65F6\u76EE\u5F55
+spring.servlet.multipart.location=F:/temp/upload/
+# \u6700\u5927\u652F\u6301\u6587\u4EF6\u5927\u5C0F
+spring.servlet.multipart.max-file-size=1000MB
+# \u6700\u5927\u652F\u6301\u8BF7\u6C42\u5927\u5C0F
+spring.servlet.multipart.max-request-size=1000MB
+
+#\u6253\u5F00\u76D1\u63A7\u7684\u6240\u6709\u8BF7\u6C42
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+#\u9ED8\u8BA4\u662F/actuator/*,\u8FD9\u91CC\u662F\u81EA\u5B9A\u4E49base url
+#management.endpoints.web.base-path=/manage
+#\u9009\u62E9\u53BB\u9664\u90E8\u5206\u8BF7\u6C42
+#management.endpoints.web.exposure.exclude=beans,trace
+#\u542F\u7528\u63A5\u53E3\u5173\u95ED Spring Boot
+management.endpoint.shutdown.enabled=true 
+#\u5173\u95EDredis\u7684\u5065\u5EB7\u68C0\u67E5
+#management.health.redis.enabled=false
+spring.application.name=Admin Client
+#spring.boot.admin.client.url=http://localhost:8000
+eureka.client.serviceUrl.defaultZone=http://localhost:8085/eureka/
+#Memcached\u914D\u7F6E\uFF08springboot\u5E76\u6CA1\u6709\u96C6\u6210memcached\uFF0C\u6240\u4EE5\u8FD9\u4E2A\u914D\u7F6E\u662F\u8981\u81EA\u5DF1\u5199\u7C7B\u8BFB\u53D6\u7684\uFF09
+memcache.ip=localhost
+memcache.port=11211
