--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -84,7 +84,7 @@ management.endpoint.health.show-details=always
 management.endpoint.shutdown.enabled=true 
 #\u5173\u95EDredis\u7684\u5065\u5EB7\u68C0\u67E5
 #management.health.redis.enabled=false
-spring.application.name=Admin Client
+spring.application.name=admin-client
 #spring.boot.admin.client.url=http://localhost:8000
 eureka.client.serviceUrl.defaultZone=http://localhost:8085/eureka/
 #Memcached\u914D\u7F6E\uFF08springboot\u5E76\u6CA1\u6709\u96C6\u6210memcached\uFF0C\u6240\u4EE5\u8FD9\u4E2A\u914D\u7F6E\u662F\u8981\u81EA\u5DF1\u5199\u7C7B\u8BFB\u53D6\u7684\uFF09
