--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<java.version>1.8</java.version>
 		<oracle.driver.version>14</oracle.driver.version>
 		<ojdbc14.version>10.2.0.4.0</ojdbc14.version>
+		<eureka.version>1.4.4.RELEASE</eureka.version>
 	</properties>
 
 	<dependencies>
@@ -125,12 +126,17 @@
 			<version>2.1.0</version>
 		</dependency>-->
 
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-			<version>1.4.4.RELEASE</version>
-		</dependency>
+			<version>${eureka.version}</version>
+		</dependency>-->
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-eureka</artifactId>
+			<version>${eureka.version}</version>
+		</dependency>
 
         <!--mysql驱动-->
 		<dependency>
